--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   math_expressions: ^2.3.1
+  units_converter: ^2.1.0
+  flutter_redux: ^0.10.0
 
 dev_dependencies:
   flutter_test:
