--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   math_expressions: ^2.3.1
   units_converter: ^2.1.0
   flutter_redux: ^0.10.0
+  hive: ^2.2.3
+  sqflite: ^2.2.6
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
